--- a/style.css
+++ b/style.css
@@ -67,13 +67,13 @@ html {
   padding: 15px;
 }
 
-/*For mobile setting*/
+/*For mobile screen(browser window) setting Grid-View column width to 100%*/
 [class*="col-"] {
   width: 100%;
 }
 
 @media only screen and (min-width: 768px) {
-  /*Setting 12 column Grid View for desktop*/
+  /*Setting Grid-View 12 column width for desktop screen(browser window) larger than 768px*/
   .col-1 {
     width: 8.33%;
   }
