--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@
 /*Page html font family*/
 html {
   font-family: "Lucida Sans", sans-serif;
+  font-size: 1em;
 }
 
 /*header style*/
@@ -54,13 +55,19 @@ img {
   height: auto;
 }
 
+/*video*/
+iframe {
+  width: 100%;
+  height: auto;
+}
+
 /*Aside bar*/
 .aside {
   background-color: #33b5e5;
   padding: 15px;
   color: #ffffff;
   text-align: center;
-  font-size: 14px;
+  font-size: 1em;
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
@@ -69,7 +76,7 @@ img {
   background-color: #0099cc;
   color: #ffffff;
   text-align: center;
-  font-size: 12px;
+  font-size: 1em;
   padding: 15px;
 }
 
